# PointRCNN

./: .gitignore  generate_local_surface_features.py  plot_utils.py  web_visualizer.py
lib/: config.py
lib/datasets/: kitti_dataset.py  kitti_rcnn_dataset.py
lib/net/: point_rcnn.py  rcnn_net.py  rpn.py  train_functions.py
lib/rpn/: proposal_layer.py  proposal_target_layer.py
lib/utils/: calibration.py  kitti_utils.py
preprocessing/: CMakeLists.txt  Makefile
tools/: eval_rcnn.py  generate_aug_scene.py  generate_gt_database.py  train_rcnn.py
tools/cfgs/: default.yaml
tools/train_utils/: train_utils.py
webviewer/: Box.py  Color.py  Frame.py  Image.py  Line.py  Vec3.py
